frontend/src/Pages/css/LandingPage.module.css
.mainBody {
  border: 1px solid;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color:#7fffd4;
}

.container {
  border: 0px solid;
  display: grid;
  height: 70vh;
  align-content: space-between;
}

.container > button {
  border: 0;
  line-height: 2.5;
  padding: 0 20px;
  text-align: center;
  color: #fff;
  text-shadow: 1px 1px 1px #000;
  text-transform: uppercase;
  font-size: 24px;
  font-weight: bold;
  border-radius: 10px;
  background-color: rgba(220, 0, 0, 1);
  background-image: linear-gradient(
    to top left,
    rgba(0, 0, 0, 0.2),
    rgba(0, 0, 0, 0.2) 30%,
    rgba(0, 0, 0, 0)
  );
  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
    inset -2px -2px 3px rgba(0, 0, 0, 0.6);
}

.container > button:hover {
  background-color: rgba(255, 0, 0, 1);
  transform: scale(1.1);
  transition-duration: 0.5s;
}

.container > button:active {
  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
}

